<resources>
    <string name="app_name">Assignment 1</string>
    <string name="numberOne">1</string>
    <string name="numberTwo">2</string>
    <string name="numberThree">3</string>
    <string name="numberFour">4</string>
    <string name="numberFive">5</string>
    <string name="numberSix">6</string>
    <string name="numberSeven">7</string>
    <string name="numberEight">8</string>
    <string name="numberNine">9</string>
    <string name="numberZero">0</string>
    <string name="additionSymbol">+</string>
    <string name="subtractionSymbol">-</string>
    <string name="multiplicationSymbol">*</string>
    <string name="divisionSymbol">/</string>
    <string name="equalsSymbol">=</string>
    <string name="clear">C</string>
    <string name="calculation">0</string>
    <string name="advanced">ADVANCED - WITH HISTORY</string>
    <string name="history"></string>
</resources>